<resources>
    <string name="app_name">OpenSpeechCorpus</string>
    <string name="title_activity_upload_audio_data">Open Speech Corpus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="record">Record</string>
    <string name="cant_record_message">Can\'t record audio, please give the app permission to record</string>
    <string name="recording">Recording</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="send">Send</string>
    <string name="title_activity_splash_screen">Open Speech Corpus</string>
    <string name="powered_by_contraslash">Powered by Contraslash</string>
    <string name="uploading_audio">Uploading Audio</string>
    <string name="may_take_few_seconds">This may take a few seconds</string>
    <string name="upload_successful">Upload Successful</string>
    <string name="upload_failure">Upload Failure, try again</string>

    <string name="downloading_text">Downloading texts</string>
    <string name="wait_please">Wait please</string>

    <string name="failed_start_recording">Failed to start recording</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam purus lorem, placerat ut nisi auctor, eleifend luctus elit. Nullam facilisis risus nec libero aliquam, a maximus ligula vestibulum. Etiam feugiat condimentum tristique. Quisque posuere at massa sed laoreet. Curabitur sed elementum urna. Morbi tincidunt est non tellus cursus placerat. Duis turpis sem, interdum a condimentum non, aliquet eget sapien. Cras ante dui, porta eget pharetra a, volutpat vel lorem. Etiam fermentum nisl in vulputate fermentum.
        Donec blandit accumsan quam eget faucibus. Sed eu magna sit amet metus pellentesque tincidunt aliquet porttitor orci. Pellentesque mauris est, gravida nec placerat at, condimentum non nisi. Nulla eu tristique purus. Duis sagittis elit non ultrices hendrerit. Vivamus vehicula nulla eu felis semper interdum. Pellentesque suscipit dignissim nibh, sed dictum lacus convallis sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce at mi suscipit, dapibus lectus eget, malesuada odio. Vestibulum dictum augue eu consectetur ornare. Vivamus placerat aliquam magna, non facilisis ex. Curabitur sed ante libero. Maecenas cursus aliquet dolor id mattis. Donec ac gravida nisi. Suspendisse mollis, arcu ut tempus tristique, nulla neque pretium metus, sit amet ullamcorper velit turpis nec nibh. Donec porttitor libero ligula, id congue magna consectetur id.
        Ut lacinia ut ante pretium venenatis. Ut sollicitudin tellus eget sem consequat hendrerit. In at accumsan sapien, sed varius leo. Nullam sed sodales eros. Aliquam condimentum sapien mollis, efficitur leo vitae, euismod leo. Proin eros arcu, tincidunt et mauris ac, pulvinar sodales risus. Sed odio enim, volutpat et mollis eget, laoreet eget ipsum. Maecenas ut aliquet elit. Phasellus nec metus cursus, sodales justo non, iaculis tortor. Sed eu urna neque.
        Aenean dictum ultricies eros. Vestibulum iaculis quis neque sollicitudin convallis. Duis vel ipsum in nibh accumsan cursus at ut ante. Nullam non metus lacinia, viverra nisi a, rutrum nulla. Sed ac enim at diam pretium vehicula. Cras ornare consequat metus vel vulputate. Fusce volutpat commodo nisl, et convallis justo convallis et. Cras consequat nibh et eros dignissim finibus. Proin facilisis neque eu mi ultricies tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas elementum fermentum diam nec hendrerit. Nunc vehicula, sapien sed pellentesque elementum, sapien eros blandit libero, id viverra quam felis venenatis erat. Etiam sit amet pretium ligula. Cras turpis sem, mattis sit amet ligula id, placerat consectetur ipsum. Nam dapibus fermentum massa, non lacinia nibh molestie in.
        Nullam lacus velit, dictum non mauris luctus, suscipit condimentum velit. Donec molestie eu mauris a venenatis. Nulla facilisi. Sed a elit dolor. Proin lobortis velit sed diam molestie suscipit. Nullam in lectus volutpat, aliquam erat at, tincidunt urna. In vitae neque sit amet tortor feugiat sollicitudin ut non magna. Sed at consequat dui. Vivamus mollis mauris sem, eget rutrum enim viverra vel. Ut pulvinar lectus sit amet mi aliquet, eu laoreet ipsum congue. Mauris sit amet purus tincidunt, fringilla odio at, convallis lorem. Nunc eget dui a arcu vestibulum tempus.
    </string>

    <string name="record_before_upload">Please record any data before upload to server</string>
    <string name="title_activity_history">History</string>


    <string name="history">History</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_send_suggestion">Send Suggestion</string>
    <string name="suggestion">Suggestion</string>
    <string name="uploading_suggestion">Uploading suggestion</string>

    <string name="understood">Understood</string>


    <string name="hold_to_record">Press and hold the red button to record</string>
    <string name="touch_to_play">Touch to play your record</string>
    <string name="touch_to_upload">Touch to upload your record to our server</string>
    <string name="touh_to_open_menu">Open the menu to see other options</string>
    <string name="title_activity_my_profile">My Profile</string>

    <string name="nick">Nick</string>
    <string name="save">Save</string>

    <string name="saving_profile">Saving your profile</string>
    <string name="profile_saved">Profile saved</string>
    <string name="next">Next</string>
    <string name="my_profile">My Profile</string>

    <string name="custom_record">Custom Record</string>
    <string name="erase_records">Erase Records</string>
    <string name="erase_message">This will remove all recordings stored in your device</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="record_does_not_exist">This record is not longer in device </string>
    <string name="notifications">Notifications</string>


    <!--HTTPResponseCodeErrors-->
    <string name="http_0">No errors</string>
    <string name="http_200">OK</string>
    <string name="http_201">Created</string>
    <string name="http_202">Accepted</string>
    <string name="http_206">PartialContent</string>
    <string name="http_400">User Error</string>
    <string name="http_401">Not authorized</string>
    <string name="http_404">Not found</string>
    <string name="http_405">Method not allowed</string>
    <string name="http_500">Internal Server Error</string>
    <string name="http_999">Time limit exceeded</string>


    <string name="title_activity_author_list">Author List</string>
    <string name="title_activity_tales_list">Tales List</string>
    <string name="title_activity_sentences_list">Sentences List</string>
    <string name="total_votes">Total votes: </string>
    <string name="tales">Tales</string>
    <string name="levels">Levels</string>
    <string name="categories">Categories</string>
    <string name="words">Words</string>
    <string name="isolated_words">Isolated Words</string>
    <string name="downloading_data">Downloading data</string>
    <string name="title_activity_upload_tale_audio_data">Upload Tale Audio Data</string>
    <string name="input_nick">We would like to know your name</string>
    <string name="maybe_later">Maybe later</string>
    <string name="title_activity_news_detail">News</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="position">#</string>
    <string name="name">Name</string>
    <string name="points">Pnts</string>

    <string name="tale_end">Tale End</string>


    <string name="notification_1_title">This is Open Speech Corpus V2 check out the changes</string>
    <string name="notification_1_body">
        We\'re improved network consumption saving all the sentences  in your local phone\n
        But don\'t worry, we just download tales that you requested\n\n
        We also want to involve more in our acoustic model creation for spanish, starting with a
        little grammar for a simple Intelligent Personal Assistant, so don\'t get bored reading
        numbers and simple commands, is a really good cause. We really thank you your collaboration \n\n
        In the next few days we\'ll upload new tales, if you want your favorite tale in OPS tell us
        We\'re glad to add it to our database. Even if you want to donate your own writings, let us know
        and we will add it to our database. \n\n
        Thanks again for all your support.\n\n
        Ma0 at contraslash.com\n\n
    </string>
</resources>
