<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contraslash.android.openspeechcorpus.apps.profile.activities.RankingList"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ranking_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_ranking_position"
        android:layout_margin="@dimen/margin_card">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/element_ranking_position_position"
            android:textSize="@dimen/font_size_big"
            android:gravity="center"
            android:text="@string/position"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/element_ranking_position_name"
            android:textSize="@dimen/font_size_big"
            android:text="@string/name"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/element_ranking_position_recordings"
            android:textSize="@dimen/font_size_big"
            android:text="@string/points"
            android:gravity="center"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ranking_list_view"
        android:layout_margin="@dimen/margin_card"/>
</LinearLayout>
