<android.support.v4.widget.DrawerLayout
    android:id="@+id/upload_audio_data_drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.contraslash.android.openspeechcorpus.apps.core.activities.UploadAudioData">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_heigth"
            android:id="@+id/upload_audio_data_helper_menu_for_showcase"/>
        <android.support.v7.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/upload_audio_data_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/upload_audio_data_toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/max_heigth_text_tale_box"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/margin_lateral_bigger"
                    android:layout_marginRight="@dimen/margin_lateral_bigger">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/upload_audio_data_tale_text"
                        android:layout_margin="@dimen/margin_lateral_default"
                        android:textSize="@dimen/font_size_medium"

                        />

                </ScrollView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_navigate_next_18pt_3x"
                    android:id="@+id/upload_audio_data_change_text"
                    android:layout_marginTop="@dimen/minimun_margin"
                    android:layout_marginRight="@dimen/minimun_margin"
                    android:layout_marginEnd="@dimen/minimun_margin"
                    android:contentDescription="@string/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">
                <com.contraslash.android.openspeechcorpus.apps.core.animations.CircleView
                    android:layout_width="@dimen/circle_animation_canvas_view_size"
                    android:layout_height="@dimen/circle_animation_canvas_view_size"
                    android:id="@+id/upload_audio_data_circle_view"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:id="@+id/upload_audio_data_recording_text"
                    />
            </RelativeLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                style="?android:buttonBarButtonStyle"
                >
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play_arrow_black_18dp"
                    android:id="@+id/upload_audio_data_play_button"
                    style="?android:buttonBarButtonStyle"
                    android:contentDescription="@string/play"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_cloud_upload_black_18dp"
                    android:id="@+id/upload_audio_data_send_button"
                    style="?android:buttonBarButtonStyle"
                    android:contentDescription="@string/send"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/upload_audio_data_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/drawer"/>
</android.support.v4.widget.DrawerLayout>